# datajoint

./: .gitignore  README.md  pyproject.toml
flask-server/: app.py  db_init.py  pop.py  schema.py
next-app/: .gitignore  next.config.js  package-lock.json  package.json
next-app/api/: app.py  schema.py
next-app/api/helpers/: init.py  pop.py  query.py  utils.py
next-app/src/app/: globals.css  layout.js  page.js  page.module.css
next-app/src/app/components/: ResultsViewer.js  SetUpStepper.js
next-app/src/app/components/results/: CustomTreeItem.js  Information.js  ResultsTree.js
next-app/src/app/components/setup/: AddData.js  AddDataSpinner.js  CondBlock.js  LogicBlock.js  QueryContainer.js  SelectDatabase.js  SetUser.js
